k8s/coma/apps/monitoring/kube-prometheus-stack/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: artichoke-cc-https
  hostnames:
    - "grafana.artichoke.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-stack-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: web-gateway
      namespace: networking
      sectionName: coma-artichoke-network-https
  hostnames:
    - "prometheus.coma.artichoke.network"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-stack-kube-prom-prometheus
          port: 9090
